# Todo-Phase-3

./: .gitignore  CLAUDE.md  test_auth.py
backend/: .gitignore  alembic.ini  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_task_table.py
backend/docs/: chat_api.md  security_review.md
backend/src/: main.py
backend/src/config/: __init__.py
backend/src/core/: config.py
backend/src/database/: __init__.py  connection.py  engine.py  memory_db.py  models.py  repositories.py  session.py
backend/src/mcp/: server.py
backend/src/middleware/: jwt.py
backend/src/models/: __init__.py  chat_models.py  conversation.py  error_models.py  mcp_tool.py  message.py  task.py  tool_call.py
backend/src/schemas/: task.py
backend/src/services/: __init__.py  ai_agent_service.py  conversation_service.py  mcp_service.py  tool_execution_service.py
backend/src/utils/: __init__.py  auth.py  better_auth_session.py  errors.py  logging.py  validation.py
backend/tests/: test_auth.py
backend/tests/api/: test_not_found_errors.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_get.py  test_tasks_update.py  test_validation_errors.py
backend/tests/contract/: test_chat_api_contract.py  test_conversation_contracts.py  test_mcp_contracts.py  test_tool_call_recording.py
backend/tests/integration/: test_ai_api_error_handling.py  test_chat_api_basic_flow.py  test_conversation_api.py  test_conversation_context_access.py  test_conversation_performance.py  test_conversation_persistence.py  (+11 more)
(+198 files in other folders)
